@@ -29,8 +29,8 @@
     <ClInclude Include="src\mem_usage.hpp" />
     <ClInclude Include="src\tablebase_tpl.hpp" />
     <ClInclude Include="src\tablespecutil.h" />
-    <ClInclude Include="src\util.h" />
     <ClInclude Include="src\mixedutil.h" />
+    <ClInclude Include="src\util.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\columntypeutil.cpp" />
