@@ -1,6 +1,9 @@
 13-August-2013:
 ===============
-+ Table.add() now returns row index of the added row. 
++ Table.add() now returns row index of the added row.
+! BREAKING CHANGE: Group() now takes a new OpenMode parameter and not a boolean. 
+  It now supports multiple ways to open a group. (ReadOnly, ReadWrite, WriteNoCreate)
++ Added Group.Commit()  
 
 04-August-2013:
 ===============
